--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "6.3.13",
     "babel-runtime": "^6.6.1",
-    "webpack": "^1.12.14"
+    "gulp": "^3.9.1",
+    "gulp-clean-css": "^2.0.6",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.3",
+    "webpack": "^1.12.15"
   },
-  "dependencies": {
-    
-  }
+  "dependencies": {}
 }
