--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "type": "git",
     "url": "git:github.com/nCrafts/tabular-input.git"
   },
+  "scripts": {
+    "test": "mocha"
+  },
   "keywords": [
     "form",
     "input",
@@ -22,11 +25,17 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "6.3.13",
     "babel-runtime": "^6.6.1",
+    "chai": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.0.6",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.3",
-    "webpack": "^1.12.15"
+    "jquery": "^2.2.3",
+    "jsdom": "^8.3.1",
+    "mocha": "^2.4.5",
+    "should": "^8.3.0",
+    "webpack": "^1.12.15",
+    "webpack-stream": "^3.1.0"
   },
   "dependencies": {}
 }
